pkg/ibmvpc/examples/out/explain_out/tgwDisablesTCPRespond_all_vpcs_explain_detail.txt
Explaining connectivity from ky-vsi0-subnet0 to ky-vsi0-subnet10
Interpreted source: test-vpc0-ky/ky-vsi0-subnet0[10.240.0.5]
Interpreted destination: test-vpc1-ky/ky-vsi0-subnet10[10.240.64.4]
================================================================

Connections from test-vpc0-ky/ky-vsi0-subnet0[10.240.0.5] to test-vpc1-ky/ky-vsi0-subnet10[10.240.64.4]: All Connections
	TCP response is blocked

Path:
	ky-vsi0-subnet0[10.240.0.5] -> security group sg1-ky -> network ACL acl1-ky -> subnet0 -> 
	test-vpc0-ky -> TGW local-tg-ky -> test-vpc1-ky -> 
	subnet10 -> network ACL acl11-ky -> security group sg11-ky -> ky-vsi0-subnet10[10.240.64.4]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 1, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	transit gateway local-tg-ky allows connection via transit connection tg_connection1 with the following prefix filter
		default prefix,  action: permit

	Ingress:
		network ACL acl11-ky allows connection with the following allow rules
			index: 2, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg11-ky allows connection with the following allow rules
			index: 1, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

TCP response is disabled; The relevant rules are:
	Egress:
		network ACL acl11-ky allows connection with the following allow rules
			index: 1, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	transit gateway local-tg-ky blocks connection via transit connection tg_connection0 with the following prefix filter
		index: 1, action: deny, ge: 22, le: 23, prefix: 10.240.0.0/21

	Ingress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
